--- a/package.json
+++ b/package.json
@@ -8,9 +8,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fontsource/josefin-sans": "^4.5.1",
+    "autoprefixer": "^10.4.2",
+    "axios": "^0.24.0",
+    "immutability-helper": "^3.1.1",
+    "mongoose": "^6.1.5",
     "next": "12.0.7",
+    "next-themes": "^0.0.15",
+    "postcss": "^8.4.5",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dnd": "^14.0.5",
+    "react-dnd-html5-backend": "^14.1.0",
+    "react-dom": "17.0.2",
+    "react-loading": "^2.0.3",
+    "swr": "^1.1.2",
+    "tailwindcss": "^3.0.12"
   },
   "devDependencies": {
     "@types/node": "17.0.8",
